@@ -601,13 +601,17 @@ def Kismet(**keywords):
     keywords['type'] = 'kismet'
     return CreateDatasource(keywords)
 
-def mapnik_version_string():
+def mapnik_version_string(version=mapnik_version()):
     """Return the Mapnik version as a string."""
-    version = mapnik_version()
     patch_level = version % 100
     minor_version = version / 100 % 1000
     major_version = version / 100000
     return '%s.%s.%s' % ( major_version, minor_version,patch_level)
+
+def mapnik_version_from_string(version_string):
+    """Return the Mapnik version from a string."""
+    n = version_string.split('.')
+    return (int(n[0]) * 100000) + (int(n[1]) * 100) + (int(n[2]));
 
 def register_plugins(path=inputpluginspath):
     """Register plugins located by specified path"""
